# creativelabs

./: Makefile  README.md  common.tex
3dgp/: 3dgp-lec1.odp  3dgp-lec10.odp  3dgp-lec11.odp  3dgp-lec12.odp  3dgp-lec13.odp  3dgp-lec14.odp  3dgp-lec2.odp  3dgp-lec3.odp  3dgp-lec4.odp  3dgp-lec5.odp  3dgp-lec6a.odp  3dgp-lec6b.odp  3dgp-lec7.odp  3dgp-lec8.odp  3dgp-lec9.odp
3dgp/lab-model/: CMakeLists.txt
3dgp/lab-model/src/: bugl.h  main.cpp
3dgp/lab1/: CMakeLists.txt  main.tex  process.dia  vao.dia
3dgp/lab1/images/: process.dia
3dgp/lab1/legacy/: triangle.vcxproj
3dgp/lab1/src/: main.cpp
3dgp/lab10/: CMakeLists.txt  simple.frag  simple.vert
3dgp/lab10/src/: ShaderProgram.cpp  main.cpp
3dgp/lab11/src/: RenderTexture.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  main.cpp
3dgp/lab12/: blur.frag  lightkeypass.frag  mergepass.frag
3dgp/lab12/src/: RenderTexture.h  ShaderProgram.cpp  VertexArray.cpp  main.cpp
3dgp/lab2/: CMakeLists.txt  main.tex
3dgp/lab2/images/: build_exe.dia  build_shader.dia
3dgp/lab2/src/: main.cpp
3dgp/lab3/: CMakeLists.txt  main.tex
3dgp/lab3/images/: uml.dia  uml.dia~
3dgp/lab3/src/: main.cpp
3dgp/lab4/: CMakeLists.txt  main.tex  simple.vert
3dgp/lab4/src/: ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  main.cpp
3dgp/lab5/: CMakeLists.txt  main.tex  simple.frag
3dgp/lab5/src/: ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
3dgp/lab6/: CMakeLists.txt  simple.frag
3dgp/lab6/images/: uml.dia
3dgp/lab6/src/: ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  main.cpp
3dgp/lab7/: CMakeLists.txt  main.tex  simple.frag  simple.vert
3dgp/lab7/images/: uml.dia
3dgp/lab7/src/: ShaderProgram.cpp  main.cpp
3dgp/lab8/: CMakeLists.txt  main.tex  simple.frag
3dgp/lab8/src/: ShaderProgram.h  Texture.cpp  Texture.h  VertexBuffer.h  main.cpp
3dgp/media/: 3dgp_teapot.xcf
gep/: gep-lec10.odp  gep-lec11.odp  gep-lec13.odp  gep-lec14.odp  gep-lec15.odp  gep-lec16.odp  gep-lec17.odp  gep-lec2.odp  gep-lec3.odp  gep-lec3a.odp  gep-lec4.odp  gep-lec4a.odp  gep-lec5.odp  gep-lec5a.odp  gep-lec5b.odp  gep-lec6.odp  gep-lec7.odp  gep-lec8.odp  gep-lec9-collision.odp  gep-lec9.odp  gep_cxx_precursor_1.odp  gep_cxx_precursor_2.odp
gep/diagrams/: AudioSystem.dia  RenderSystem.dia
gep/lab1/: main.tex
gep/lab1/images/: additional.dia  simple.dia
gep/lab10/: main.tex  simple.frag
gep/lab10/src/: ShaderProgram.cpp  VertexArray.h  main.cpp
gep/lab15/: CMakeLists.txt  mergepass.vert
gep/lab15/src/: ShaderProgram.cpp  ShaderProgram.h  main.cpp
gep/lab2/: CMakeLists.txt  main.tex
gep/lab2/images/: uml.dia
gep/lab2/src/game/: main.cpp
gep/lab2/src/myengine/: Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  myengine.h
gep/lab3a/images/: uml.dia
gep/lab3b/: CMakeLists.txt  main.tex
gep/lab3b/src/: main.cpp
gep/lab4/: CMakeLists.txt  main.tex
gep/lab4/images/: uml.dia  uml_resources.dia
gep/lab4/src/game/: main.cpp
gep/lab4/src/myengine/: Component.h  Entity.h  MeshRenderer.cpp  MeshRenderer.h  VertexArray.h  VertexBuffer.h
gep/lab4a/: main.cpp
gep/lab4a/sample/: CMakeLists.txt  README.md
gep/lab4a/sample/other/: Exception.cpp  Exception.h  premain.cpp
gep/lab4a/sample/src/geppy/: Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  geppy.h
gep/lab4a/sample/src/sandbox/: TriangleRenderer.cpp  TriangleRenderer.h  main.cpp
gep/lab5/: simple.vert
gep/lab5/images/: uml.dia
gep/lab5/src/: ShaderProgram.h  main.cpp
gep/lab6/: CMakeLists.txt
gep/lab6/resources/shaders/: simple.frag  simple.vert
gep/lab6/src/game/: main.cpp
gep/lab6/src/myengine/: Core.cpp  Core.h  ShaderProgram.cpp  ShaderProgram.h  Sound.cpp  Sound.h  VertexBuffer.cpp  myengine.h
gep/lab7/: CMakeLists.txt  bomb.cpp
gep/lab7/src/game/: main.cpp
gep/lab7/src/myengine/: Exception.cpp  Exception.h  VertexArray.cpp  myengine.h
gep/lab8/images/: collision.dia
gep/lab9/: main.tex
